fix(nav): avoid breadcrump overlap on lg screen when sidebar visible

--- a/scss/templates/components/d-navigation.scss
+++ b/scss/templates/components/d-navigation.scss
@@ -50,6 +50,14 @@
       display: none;
     }
   }
+
+  @include media-breakpoint-up(lg) {
+    // Allow to keep the expected space while avoiding clash due to sidebar
+    .category-breadcrumb {
+      opacity: 0;
+      pointer-events: none;
+    }
+  }
 }
 
 .category-actions {
